package br.com.fiap.iphone.bean;

public interface Camera {
    public void tirarFoto();
    public void exibirFoto();
    public void guardarNaGaleria();
    public void exibirGaleria();
    public void darZoom();
}
