package br.com.fiap.iphone.bean;

public record Contato(String nome, int numero) {
}
