package br.com.fiap.iphone.bean;

public record Email(String endereco, String remetente, String destinatario, String corpoDoEmail) {
}
