package br.com.fiap.iphone.bean;

public record Foto() {
}
