package br.com.fiap.iphone.bean;

public interface Ipod {
    public void tocar();
    public void pausar();
    public void selecionarMusica();
    public void pular();
    public void trocarModo(Modo modo);
}
