package br.com.fiap.iphone.bean;

public record Mensagem(String destinatario, String remetente, String mensagem) {
}
