package br.com.fiap.iphone.bean;

public record Modo (String nome, String acao){ }
