package br.com.fiap.iphone.bean;

public record Musica(String nome, String duracao, double avaliacao) {
}
