package br.com.fiap.iphone.bean;

public record Voicemail(int duracao) {
}
